fix(proj1): fix guitor sample()