@@ -64,6 +64,6 @@ public class GuitarString {
     /* Return the double at the front of the buffer. */
     public double sample() {
         // TODO: Return the correct thing.
-        return buffer.getFirst();
+        return buffer.get(0);
     }
 }
